--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         python-version: 3.9
         
     - name: Download required libraries
-      run: pip install requirements.txt
+      run: pip install -r requirements.txt
         
     - name: Generate README
       run: yomu
