--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       run: pip install -r requirements.txt
         
     - name: Generate README
-      run: yomu
+      run: yomu --log=DEBUG
 
     - name: Commit wiki
       continue-on-error: true
